# wisp

./: .gitignore  README.md  pyproject.toml  requirements.txt
wisp/: __init__.py  cli.py  client.py  config.py
wisp/commands/: __init__.py  file_ops.py  shell.py
